# Flamethrower

./: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui  mywidget.cpp  mywidget.h  reader.h  scorewidget.cpp  scorewidget.h
